--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,17 +4,13 @@ build-backend = "flit_core.buildapi"
 
 [project]
 name = "flask-rpc"
+version = "1.6.2"
 authors = [{ name = "David Carmichael", email = "david@uilix.com" }]
 license = { file = "LICENSE" }
 classifiers = [
-    'Programming Language :: Python :: 3.8',
-    'Programming Language :: Python :: 3.9',
-    'Programming Language :: Python :: 3.10',
-    'Programming Language :: Python :: 3.11',
-    'Programming Language :: Python :: 3.12',
     "License :: OSI Approved :: MIT License",
-    'Topic :: Internet :: WWW/HTTP :: Dynamic Content',
-    'Natural Language :: English',
+    "Framework :: Flask",
+    "Natural Language :: English",
 ]
 dynamic = ["version"]
 description = "Turn Flask into a simple RPC server"
