rename app to example, rename license, add github publish action, more requirements to dir, update pyproject

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,3 +19,9 @@ dependencies = [
     'Flask',
     'pydantic',
 ]
+
+[tool.ruff]
+src = ["src"]
+fix = true
+show-fixes = true
+output-format = "full"
